ECOM Website SHOPPY MALL All Functionality Done

--- a/backend/config/Config.env
+++ b/backend/config/Config.env
@@ -1,3 +1,6 @@
 PORT= 8000
 DB_URL = mongodb://admin:admin@ac-m74zzjs-shard-00-00.ebjf9vb.mongodb.net:27017,ac-m74zzjs-shard-00-01.ebjf9vb.mongodb.net:27017,ac-m74zzjs-shard-00-02.ebjf9vb.mongodb.net:27017/?ssl=true&replicaSet=atlas-enyo8i-shard-0&authSource=admin&retryWrites=true&w=majority
 JWT_SECRET = JSDAJDAKDAJDASDAJHSKLAKD
+BRAINTREE_MERCHANT_ID = tt2vjbm8365dxwmc
+BRAINTREE_PUBLIC_KEY = kc3kvftr839whpbm
+BRAINTREE_PRIVATE_KEY =3d577017fbc258b96f18bc213a14b722
