--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,6 @@
   "type": "module",
   "scripts": {
     "start": "nodemon server.js"
-   
-   
   },
   "keywords": [],
   "author": "Muhammad Anas Khan",
@@ -15,14 +13,17 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "braintree": "^3.16.0",
     "colors": "^1.4.0",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "slugify": "^1.6.6"
   }
 }
