--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
-    "build":"npm i"
+    "start": "node server.js"
+    
   },
   "keywords": [],
   "author": "Muhammad Anas Khan",
